# pml-trader

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
database/: config.py  integration.py  postgres_adapter.py  redis_adapter.py  setup_db.py
database/scripts/: cache_setup.py  db_check.py  db_init.py
docs/: bash-commands-tutorial.md  docker_setup.md  git-github-tutorial.md  project_structure.md
docs/hmm/: hmm-guide.md  hmm-practice-guide.md
pml_trader/: __init__.py
pml_trader/examples/demo_hmm/: demo_hmm_actor.py  demo_hmm_data.py  run_demo_backtest.py
pml_trader/infrastructure/: __init__.py  config.py
pml_trader/models/: __init__.py
pml_trader/models/hmm/: hmm_data.py  hmm_model.py
pml_trader/strategies/: hmm_strategy.py
probabilistic_trading/: __init__.py
probabilistic_trading/examples/demo_hmm/: demo_hmm_actor.py  demo_hmm_strategy.py  run_demo_backtest.py
probabilistic_trading/infrastructure/: __init__.py  config.py
probabilistic_trading/model/: __init__.py
probabilistic_trading/model/hmm/: __init__.py  hmm_actor.py  hmm_data.py  hmm_model.py
probabilistic_trading/model/kalman/: __init__.py  kalman_actor.py  kalman_data.py  kalman_model.py
probabilistic_trading/models/hmm/: __init__.py  hmm.md  hmm_actor.py  hmm_model.py
probabilistic_trading/strategies/: hmm_strategy.py
probabilistic_trading/strategy/: __init__.py  hmm_strategy.py  hmmkalman_strategy.py  kalman_strategy.py
research/: feature_engineering.ipynb  gaussian_hmm_dev.py  gaussian_hmm_tutorial.py  hmm_dev.ipynb  hmm_model_development_15m.py  hmm_model_development_5m.py  hmm_model_validation.py  hmm_plotting.py
scripts/backtest/: hmm_backtest_engine.py  hmm_backtest_node.py  hmmkalman_backtest_engine.py
scripts/utils/: batch_raw_to_catalog.py  check_catalog.py  raw_to_catalog.py  raw_to_catalog_batch.py
scripts/utils/databento/: download_historical.py
trading/backtest/: hmm_engine.py  hmm_node.py
